Fix gn reference in build.ninja after bootstrapping

After bootstrapping gn, build.ninja has a reference that looks something like:
command = ../../../../../../../../../../tmp/tmp9Pn0sv/gn --root=../.. -q gen .

This reference will be broken when the OS removes the temporary directory.  This
CL regenerates the build files using the gn executable from the build directory.

This on its own will update the reference to plain "gn", however we need the
reference to be "./gn", because "gn" might not exist in the PATH, or would point
to an old one from depot_tools.

BUG=808829
R=dpranke

Change-Id: I1b156a6af081a35ded152946af13a117563b8c1a
Reviewed-on: https://chromium-review.googlesource.com/905793
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Brett Wilson <brettw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535892}
Former-commit-id: 00eba186828272462f318ee7ff4ed2106a6388a7